5-complex-templates/d_complex-templates-2/rds.tf
resource "aws_db_subnet_group" "subn-groups" {
    subnet_ids = ["${aws_subnet.pri1.id}", "${aws_subnet.pri2.id}"]
}

resource "aws_db_instance" "mydb" {
    instance_class = "db.t2.micro"
    identifier = "mydb"
    username = "${var.rds_username}"
    password = "${var.rds_passwd}"
    engine = "mysql"
    allocated_storage = 5
    storage_type = "gp2"
    multi_az = false
    db_subnet_group_name = "${aws_db_subnet_group.subn-groups.name}"
    vpc_security_group_ids = ["${aws_security_groups.rds-sg.id}"]
    publicly_accessible = true
    skip_final_snapshot = true
}
